# MCP-Sheet-Parser-cot

./: .coverage  .gitignore  LICENSE  MCP-Sheet-Parser.md  README.md  TASK_QUEUE.md  TESTING_SUMMARY.md  create_failing_style_excel.py  dataset_fashion_store_campaigns.csv  dataset_fashion_store_customers.csv  fidelity_report.txt  main.py  pyproject.toml  run_tests.py  spec.md  test_chart_generation.py  test_e2e.py  test_mcp_server.py  test_streaming.py  test_system.py
documentation/: Architecture.md  DeveloperGuide.md  UserGuide.md
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
scripts/: validate_fidelity.py
src/: config.py  constants.py  core_service.py  exceptions.py  font_manager.py  unified_config.py  validators.py
src/cache/: __init__.py  cache_manager.py  config.py  disk_cache.py  lru_cache.py
src/config/: font_config.json  font_config.tmp
src/converters/: __init__.py  cell_converter.py  chart_converter.py  html_converter.py  json_converter.py  paginated_html_converter.py  style_converter.py  svg_chart_renderer.py  table_structure_converter.py
src/mcp_server/: __init__.py  server.py  tool_definitions.py  tools.py
src/models/: table_model.py  tools.py
src/parsers/: base_parser.py  csv_parser.py  et_parser.py  factory.py  parser_factory.py  xls_parser.py  xlsb_parser.py  (+2 more)
tests/: README.md  test_advanced_css_integration.py  test_config_fix.py  test_converters.py  test_core_service.py  test_data_generator.py  test_data_writeback.py  test_end_to_end.py  test_exceptions.py  test_font_manager.py  test_hyperlink_comment_integration.py  test_integration.py  test_mcp_server.py  test_mcp_tools.py  test_models.py  test_parsers.py  test_performance.py  test_services.py  test_style_fidelity.py  test_unified_config.py  test_utils.py  test_validators.py
(+52 files in other folders)
