[project]
name = "mcp-sheet-parser"
version = "0.1.0"
description = "An MCP server to parse spreadsheet files into styled HTML."
dependencies = [
    "mcp[cli]",
    "openpyxl",
    "Jinja2",
    "xlrd",        # For .xls files
    "pyxlsb",      # For .xlsb files
    "xlwt",        # Additional support for .xls files
]
