[project]
name = "mcp-sheet-parser"
version = "0.1.0"
description = "An MCP server to parse spreadsheet files into styled HTML."
dependencies = [
    "mcp[cli]",
    "openpyxl",
    "jinja2",
    "xlrd", # For .xls files
    "pyxlsb", # For .xlsb files
    "xlwt", # Additional support for .xls files
    "pytest",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "xlutils>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
markers = [
    "models: marks tests as related to data models",
]
