[project]
name = "MCP-Sheet-Parser-Cot"
version = "0.1.0"
description = "一个为AI智能体设计的高保真电子表格解析与HTML转换器 (MCP工具)。"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "mcp[cli]",
    "openpyxl",
    "jinja2",
    "xlrd", # For .xls files
    "pyxlsb", # For .xlsb files
    "xlwt", # Additional support for .xls files
    "pytest",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "xlutils>=2.0.0",
    "cachetools>=5.3.0", # For LRU cache
    "pandas>=1.3.0", # For parquet support
    "pyarrow>=10.0.0", # For parquet format
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest-benchmark",
    "beautifulsoup4"
]


[project.scripts]
mcp-sheet-parser = "src.mcp_server.server:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
markers = [
    "models: marks tests as related to data models",
]
